caproto/v1.0.0/_sources/generated/caproto.server.autosave.AutosaveHelper.rst.txt
caproto.server.autosave.AutosaveHelper
======================================


.. currentmodule:: caproto.server.autosave

.. inheritance-diagram:: AutosaveHelper

.. autoclass:: AutosaveHelper

    .. if not using autodoc, add this here: automethod:: __init__

    

    

    
    
    .. list-table:: AutosaveHelper pvproperties
        :header-rows: 1
        :widths: auto

        *  - Attribute
           - Suffix
           - Docs
           - Type
           - Notes
           - Alarm Group
    
        *  - autosave_hook
           - ``:__autosave_hook__``
           - Internal hook which handles autosave functionality
           - int 
           - 
                 **Read-only**
                 **Startup**
           - 
    
    

    
    

    
    
    .. rubric:: Methods

    .. autosummary::
    
       ~AutosaveHelper.find_autosave_properties
       ~AutosaveHelper.group_read
       ~AutosaveHelper.group_write
       ~AutosaveHelper.prepare_data
       ~AutosaveHelper.restore_from_file
       ~AutosaveHelper.restore_values
       ~AutosaveHelper.save
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::

    
       ~AutosaveHelper.default_values
       ~AutosaveHelper.filename
       ~AutosaveHelper.period
       ~AutosaveHelper.type_map
       ~AutosaveHelper.type_map_read_only
    

    
    .. rubric:: pvproperty methods
    .. method:: autosave_hook.startup(self, instance, async_lib)
        
    A startup hook which lives until the IOC exits.

        Initially restores values from the autosave file `self.filename`, then
        periodically - at `self.period` seconds - saves autosave data to
        `self.filename`.
    

    
    .. raw:: html

        <details>
        <summary>Source code: autosave_hook.startup</summary>

    
    .. literalinclude:: /../../../../caproto/caproto/server/autosave.py
        :language: python
        :linenos:
        :dedent: 0
        :lineno-start: 219
        :lines: 219-231

    .. raw:: html

        </details>
        <br/>

    